:bug: Add z-index to contact bar

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -105,6 +105,7 @@
   margin: auto;
   left: 0;
   right: 0;
+  z-index: 100;
 }
 
 main {
